--- a/src/style.scss
+++ b/src/style.scss
@@ -24,67 +24,37 @@
 	}
 }
 
-.cwp-gf-wb-repeater-field {
-	.actions {
-		text-align: right;
+.cwp-gf-wb-action-modal {
+	width: 50%;
+	@include breakpoint("xxs") {
+		width: 100%;
 	}
-
-	.cwp-gf-wb-empty-fields {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-items: center;
-		background-color: #f0f0f0;
-		transition: 0.5s;
-		padding: 40px 0px;
-		margin: 30px 0px;
-		cursor: pointer;
-		user-select: none;
-		&:hover {
-			background-color: #e8e2e2;
-		}
+	@include breakpoint("xs") {
+		width: 100%;
 	}
+}
 
-	.cwp-gf-wb-repeater-grp {
-		padding: 30px 20px;
-		border: 1px solid #ccc;
-		margin: 20px 0px;
+// .cwp-webhook-picker {
+// }
+
+.cwp-gf-wb-action-modal {
+	.wb-field {
+		margin: 25px 0px;
 	}
 
 	.row {
-		width: 100%;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
-		margin: 20px 0px;
 
-		@include breakpoint("xxs") {
+		.row-v {
+			display: flex;
 			flex-direction: column;
+			margin-right: 20px;
 		}
 
-		.cwp-gf-wb-field:first-child {
-			flex: 1;
+		.mr-10 {
 			margin-right: 10px;
-
-			@include breakpoint("xxs") {
-				flex: 1;
-				margin-right: 0px;
-				width: 100%;
-			}
-		}
-
-		.cwp-gf-wb-field:nth-child(2) {
-			flex: 0.5;
-			select {
-				height: 100%;
-				width: 100%;
-			}
-
-			@include breakpoint("xxs") {
-				flex: 1;
-				margin-right: 0px;
-				width: 100%;
-			}
 		}
 	}
 }
